...
              // Título principal
              Container(
                width: double.infinity,
                padding: const EdgeInsets.symmetric(vertical: 10, horizontal: 8),
                color: const Color(0xFF173664),
                child: const Text(
                  "Pagos",
                  textAlign: TextAlign.center,
                  style: TextStyle(
                    fontFamily: "Montserrat",
                    fontWeight: FontWeight.w600,
                    fontSize: 18,
                    color: Colors.white,
...
                  unselectedLabelStyle: const TextStyle(
                    fontFamily: "Montserrat",
                    fontWeight: FontWeight.w500,
                    fontSize: 14,
                  ),
                  tabs: const [
                    Tab(text: 'Boletas de Inicio'),
                    Tab(text: 'Boletas de Finalización'),
                  ],
                ),
              ),

              // Lista de boletas con tabs
              Expanded(
...
