...
    } on TimeoutException catch (_) {
      return const RedLinkPaymentResponseModel(
        paymentUrl: '',
        tokenIdLink: '',
        referencia: '',
        success: false,
        error: 'Tiempo de espera agotado',
      );
    } on FormatException catch (_) {
      return const RedLinkPaymentResponseModel(
        paymentUrl: '',
        tokenIdLink: '',
        referencia: '',
...
